# BioVision

./: .gitignore  pyproject.toml
config/: default.ini
data/: clarity_scores.csv
src/bioVision/: __main__.py  saveClarityData.py
src/cameraControl/: __init__.py  camera.py
src/common/: __init__.py  logger.py
src/dataAnalysis/: __init__.py  focusControl.py
src/getData/: clarityData.py  clarityDataWithFocus.py  clarityDataWithZoom.py
src/imgAnalysis/: __init__.py  imgClarityEvaluation.py
tests/: test_camera.py  test_imgClarityEvaluation.py  test_logger.py
tools/: cameraTest.py  focusControlTest.py
